--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "backend",
+  "name": "searchland-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +22,11 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
