--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "searchland-test-frontend",
+  "name": "searchland-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
@@ -40,6 +39,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1"
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2"
   }
 }
