--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
+    "generate-migration": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
     "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
@@ -23,8 +25,11 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
+    "drizzle-kit": "^0.24.2",
     "jest": "^29.7.0",
+    "pg": "^8.13.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
