--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4",
+    "@trpc/react-query": "^10.45.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
