--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,12 +22,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
+    "cors": "^2.8.5",
     "drizzle-kit": "^0.24.2",
     "jest": "^29.7.0",
     "pg": "^8.13.0",
