--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage --passWithNoTests --detectOpenHandles",
     "test:watch": "jest --watch",
     "generate-migration": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
@@ -30,6 +30,7 @@
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.2",
     "jest": "^29.7.0",
     "pg": "^8.13.0",
