--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apps/backend",
     "apps/frontend"
   ],
+  "private": true,
   "scripts": {
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "npm run test --workspace=searchland-backend",
